Prevent oversizing of news box on smaller displays.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -52,6 +52,8 @@ section.news {
   box-sizing: border-box;
   font-size: 85%;
   letter-spacing: .2px;
+  max-height: 118px;
+  overflow: hidden;
 }
 
 .news a.news-item {
